--- a/sales.html
+++ b/sales.html
@@ -2,9 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Sales</title>
   </head>
   <body>
+    <h2>1st and Pike</h2>
+    <ul id='1stPike'>
+    </ul>
 
+    <h2>SeaTac Airport</h2>
+    <ul id='seatac'>
+    </ul>
+
+    <h2>Seattle Center</h2>
+    <ul id='seaCenter'>
+    </ul>
+
+    <h2>Capitol Hill</h2>
+    <ul id='capHill'>
+    </ul>
+
+    <h2>Alki</h2>
+    <ul id='alki'>
+    </ul>
   </body>
+  <script src='app.js' type="text/javascript"></script>
 </html>
