--- a/sales.html
+++ b/sales.html
@@ -14,7 +14,7 @@
     </ul>
 
     <h2>Seattle Center</h2>
-    <ul id='seaCenter'>
+    <ul id='center'>
     </ul>
 
     <h2>Capitol Hill</h2>
@@ -22,7 +22,7 @@
     </ul>
 
     <h2>Alki</h2>
-    <ul id='alki'>
+    <ul id='alkiShop'>
     </ul>
   </body>
   <script src='app.js' type="text/javascript"></script>
