--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href='style.css' rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <title>Salmon Cookie</title>
   </head>
   <body>
-    
+    <div id='image'>
+      <img src='images/salmonBruh.png' alt='A salmon' />
+    </div>
+    <nav>
+      <ul>
+        <li><a href='sales.html'>Sales</a></li>
+        <li>Locations</li>
+        <li>Franchising</li>
+        <li>Contact Us</li>
+      </ul>
+    </nav>
+  <div id='hours'>
+    <h4><u>Hours of Operation</u></h4>
+    <p>Sunday - Saturday</p>
+    <p>6 AM - 8 PM</p>
+  </div>
+  <div id='name'>
+    <h1>Pat's Salmon Cookies</h1>
+  </div>
+  <div id='shop_blurb'>
+    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!).</p>
+  </div>
   </body>
 </html>
