fixed list CSS effecting front page

--- a/sales.html
+++ b/sales.html
@@ -7,24 +7,25 @@
     <title>Sales</title>
   </head>
   <body>
+    <h1>Salmon Cookie Sales</h1>
     <h2>1st and Pike</h2>
-    <ul id='pike'>
+    <ul id='pike' class='sales'>
     </ul>
 
     <h2>SeaTac Airport</h2>
-    <ul id='seatac'>
+    <ul id='seatac' class='sales'>
     </ul>
 
     <h2>Seattle Center</h2>
-    <ul id='center'>
+    <ul id='center' class='sales'>
     </ul>
 
     <h2>Capitol Hill</h2>
-    <ul id='capHill'>
+    <ul id='capHill' class='sales'>
     </ul>
 
     <h2>Alki</h2>
-    <ul id='alkiShop'>
+    <ul id='alkiShop' class='sales'>
     </ul>
   </body>
   <script src='app.js' type="text/javascript"></script>
