turned 5 seperate object literals into one constructor object and cried as I deleted all my work from yesterday

--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,8 @@
     <title>Sales</title>
   </head>
   <body>
-    <h2>1st and Pike</h2>
+    <h1>Salmon Cookie Sales</h1>
+    <!-- <h2>1st and Pike</h2>
     <ul id='pike'>
     </ul>
 
@@ -25,7 +26,9 @@
 
     <h2>Alki</h2>
     <ul id='alkiShop'>
-    </ul>
+    </ul> -->
+    <section id='sales_section'>
+    </section>
   </body>
   <script src='app.js' type="text/javascript"></script>
 </html>
