put all my method calls into a for loop

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src='images/salmonBruh.png' alt='A salmon' />
     </div>
     <nav>
-      <ul>
+      <ul id='dontChangePlz'>
         <li>Locations</li>
         <li>Franchising</li>
         <li>Contact Us</li>
