TAKE THAT YOU DAMN TABLES! got it all working finally

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <div id='hours'>
     <h4><u>Hours of Operation</u></h4>
     <p>Sunday - Saturday</p>
-    <p>6 AM - 8 PM</p>
+    <p>6 AM - 7 PM</p>
   </div>
   <div id='name'>
     <h1>Pat's Salmon Cookies</h1>
   </div>
   <div id='shop_blurb'>
-    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!).</p>
+    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!)</p>
   </div>
   </body>
 </html>
