--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,7 @@
     <h1>Salmon Cookie Sales</h1>
     <section id='sales_section'>
     </section>
+    <img src='images/salmonBruh.png' />
   </body>
   <script src='app.js' type="text/javascript"></script>
 </html>
