I'm not sure what I changed but everything is working

--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,7 @@
     <section id='sales_section'>
     </section>
     <form id='dasForm'>
-      <table>
+      <table id='formTable'>
         <tr>
           <td><label for="storeName">Store Name: </label>
           <td><input type="text" name="storeName" placeholder="Enter Store Name" />
