minor text fixes

--- a/sales.html
+++ b/sales.html
@@ -13,19 +13,19 @@
       <table id='formTable'>
         <tr>
           <td><label for="storeName">Store Name: </label>
-          <td><input type="text" name="storeName" placeholder="Enter Store Name" />
+          <td><input type="text" name="storeName" placeholder="Enter Store Name" required/>
         </tr>
         <tr>
           <td><label for="minCust">Minimum # of Customers: </label>
-          <td><input type="number" name="minCust" />
+          <td><input type="number" name="minCust" required/>
         </tr>
         <tr>
           <td><label for="maxCust">Maximum # of Customers: </label>
-          <td><input type="number" name="maxCust" />
+          <td><input type="number" name="maxCust" required/>
         </tr>
         <tr>
           <td><label for="avgCookie">Average # of Cookies per Hour: </label>
-          <td><input type="number" name="avgCookie" step="0.1" />
+          <td><input type="number" name="avgCookie" step="0.1" required/>
         </tr>
         <tr>
           <td id='blank'></td>
