created location and contact pages. added images to folder for use.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Salmon Cookie</title>
   </head>
   <body>
-    <div id='image'>
+    <div class='image'>
       <img src='images/salmonBruh.png' alt='A salmon' />
     </div>
     <nav>
-      <ul id='dontChangePlz'>
-        <li>Locations</li>
+      <ul>
+        <li><a href="locations.html">Locations</a></li>
         <li>Franchising</li>
         <li>Contact Us</li>
       </ul>
@@ -26,9 +26,11 @@
     <h1>Pat's Salmon Cookies</h1>
   </div>
   <div id='shop_blurb'>
-    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!)</p>
+    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!) Great for the entire family!<img src='images/family.jpg' />'</p>
+  </div>
+  <div id='shop'>
+    <h4><a href='#'>Merchandise</a></h4>
+    <img src='images/shirt.jpg' />
   </div>
   </body>
 </html>
-
-<input type="text" name="" step="0.1">
