--- a/sales.html
+++ b/sales.html
@@ -33,7 +33,8 @@
         </tr>
       </table>
     </form>
-    <img src='images/salmonBruh.png' />
+    <img src='images/cutter.jpeg' id='cutter'/>
+    <img src='images/frosted-cookie.jpg' id='frostedCookie'/>
   </body>
   <script src='app.js' type="text/javascript"></script>
 </html>
