moved files into seperate folders

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="locations.html">Locations</a></li>
         <li>Franchising</li>
-        <li>Contact Us</li>
+        <li><a href='contact.html'>Contact Us</a></li>
       </ul>
     </nav>
   <div id='hours'>
