made up contact page. made things look the same

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <meta charset="utf-8">
     <title>Contact Us</title>
   </head>
   <body>
-    <img src='images/fish.jpg' />
+    <h1>Contact Us</h1>
+    <img src='../images/fish.jpg' id='weird_fish'/>
+    <h2 class='locationNames'>Mail Us</h2>
+      <ul class='locationList'>
+        <li>2401 Utah Ave S</li>
+        <li>Seattle, WA 98134</li>
+      </ul>
+      <h2 class='locationNames'>Call Us</h2>
+        <ul class='locationList'>
+          <li>(206)749-5927</li>
+        </ul>
+        <h2 class='locationNames'>Email Us</h2>
+          <ul class='locationList'>
+            <li>salmoncookies@bestbusiness.com</li>
+          </ul>
   </body>
 </html>
