--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href='style.css' rel="stylesheet">
+    <link href='../style.css' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <title>Salmon Cookie</title>
   </head>
   <body>
     <div class='image'>
-      <img src='images/salmonBruh.png' alt='A salmon' />
+      <img src='../images/salmonBruh.png' alt='A salmon' />
     </div>
     <nav>
       <ul>
@@ -26,11 +26,11 @@
     <h1>Pat's Salmon Cookies</h1>
   </div>
   <div id='shop_blurb'>
-    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!) Great for the entire family!<img src='images/family.jpg' />'</p>
+    <p>Salmon shaped cookies <strong>MADE</strong> with finely ground salmon! It is <em>THE</em> ideal match for a nice cup of coffee on a misty Seattle morning (or afternoon!) Great for the entire family!<img src='../images/family.jpg' />'</p>
   </div>
   <div id='shop'>
     <h4><a href='#'>Merchandise</a></h4>
-    <img src='images/shirt.jpg' />
+    <img src='../images/shirt.jpg' />
   </div>
   </body>
 </html>
