ok im sick of this nonsense

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="locations.html">Locations</a></li>
         <li>Franchising</li>
         <li><a href='HTML/contact.html'>Contact Us</a></li>
+        <li><a href='HTML/sales.index'>Sales Pages</a></li>
       </ul>
     </nav>
   <div id='hours'>
