omg....location page ADDED TO THE DAMN MAIN PAGE AGAIN

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="locations.html">Locations</a></li>
+        <li><a href="HTML/locations.html">Locations</a></li>
         <li>Franchising</li>
         <li><a href='HTML/contact.html'>Contact Us</a></li>
         <li><a href='HTML/sales.html'>Sales Page</a></li>
